Fix Leaflet z-index.

--- a/src/styles/junk/_common.scss
+++ b/src/styles/junk/_common.scss
@@ -232,7 +232,7 @@ span {
   }
 }
 
-.leaflet-map-pane {
+.leaflet-map {
   z-index: 0;
 }
 
